--- a/NestContact/NestContact/Base.lproj/Main.storyboard
+++ b/NestContact/NestContact/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
                 <viewController id="vXZ-lx-hvc" customClass="NCViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="p1v-0V-evY"/>
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="293" verticalHuggingPriority="251" ambiguous="YES" text="YDSD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Mf-bei">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="293" verticalHuggingPriority="251" text="YDSD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Mf-bei">
                                 <rect key="frame" x="20" y="264" width="47" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -38,22 +38,25 @@
                                 <rect key="frame" x="32" y="527" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </switch>
-                            <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="jnn-8y-7mK">
+                            <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="jnn-8y-7mK">
                                 <rect key="frame" x="206" y="260" width="94" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             </stepper>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="D4T-Mf-bei" firstAttribute="centerY" secondItem="jnn-8y-7mK" secondAttribute="centerY" id="EP4-6s-JPL"/>
                             <constraint firstAttribute="centerX" secondItem="Qt8-gQ-5Aa" secondAttribute="centerX" id="SYr-r7-GZk"/>
                             <constraint firstItem="D4T-Mf-bei" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="Sve-aw-h7b"/>
                             <constraint firstItem="Ipq-4L-ES9" firstAttribute="top" secondItem="d2T-Vm-gF6" secondAttribute="bottom" constant="10" id="eVO-Ls-u9Q"/>
-                            <constraint firstItem="D4T-Mf-bei" firstAttribute="top" relation="greaterThanOrEqual" secondItem="kh9-bI-dsS" secondAttribute="top" constant="264" id="obP-ly-dlK"/>
+                            <constraint firstItem="D4T-Mf-bei" firstAttribute="top" secondItem="p1v-0V-evY" secondAttribute="bottom" constant="244" id="rpd-Zd-zzG"/>
                             <constraint firstItem="d2T-Vm-gF6" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="32" id="tqP-9Y-RP7"/>
+                            <constraint firstAttribute="trailing" secondItem="jnn-8y-7mK" secondAttribute="trailing" constant="20" symbolic="YES" id="twV-tr-OVK"/>
                             <constraint firstAttribute="centerY" secondItem="Qt8-gQ-5Aa" secondAttribute="centerY" id="yQA-9F-Pyj"/>
                         </constraints>
                     </view>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-108" y="-41"/>
         </scene>
