--- a/NestContact/NestContact/Base.lproj/Main.storyboard
+++ b/NestContact/NestContact/Base.lproj/Main.storyboard
@@ -14,46 +14,9 @@
                         <viewControllerLayoutGuide type="bottom" id="Ipq-4L-ES9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="293" verticalHuggingPriority="251" text="YDSD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Mf-bei">
-                                <rect key="frame" x="20" y="264" width="47" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="lbl-yf-I4a"/>
-                                    <constraint firstAttribute="width" constant="47" id="wcK-b3-xDk"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qt8-gQ-5Aa">
-                                <rect key="frame" x="133" y="269" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Touch it">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d2T-Vm-gF6">
-                                <rect key="frame" x="32" y="527" width="51" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </switch>
-                            <stepper opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="jnn-8y-7mK">
-                                <rect key="frame" x="206" y="260" width="94" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                            </stepper>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="D4T-Mf-bei" firstAttribute="centerY" secondItem="jnn-8y-7mK" secondAttribute="centerY" id="EP4-6s-JPL"/>
-                            <constraint firstAttribute="centerX" secondItem="Qt8-gQ-5Aa" secondAttribute="centerX" id="SYr-r7-GZk"/>
-                            <constraint firstItem="D4T-Mf-bei" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="20" id="Sve-aw-h7b"/>
-                            <constraint firstItem="Ipq-4L-ES9" firstAttribute="top" secondItem="d2T-Vm-gF6" secondAttribute="bottom" constant="10" id="eVO-Ls-u9Q"/>
-                            <constraint firstItem="D4T-Mf-bei" firstAttribute="top" secondItem="p1v-0V-evY" secondAttribute="bottom" constant="244" id="rpd-Zd-zzG"/>
-                            <constraint firstItem="d2T-Vm-gF6" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="32" id="tqP-9Y-RP7"/>
-                            <constraint firstAttribute="trailing" secondItem="jnn-8y-7mK" secondAttribute="trailing" constant="20" symbolic="YES" id="twV-tr-OVK"/>
-                            <constraint firstAttribute="centerY" secondItem="Qt8-gQ-5Aa" secondAttribute="centerY" id="yQA-9F-Pyj"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -64,6 +27,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
