test insert person

--- a/NestContact/NestContact/Sources Files/Display Layer/Main.storyboard
+++ b/NestContact/NestContact/Sources Files/Display Layer/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ijW-LJ-APy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ijW-LJ-APy">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -80,7 +80,7 @@
                             <inset key="sectionInset" minX="5" minY="7" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="User" id="j1l-i3-TTr">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="User" id="j1l-i3-TTr" customClass="NCPersonDisplayCell">
                                 <rect key="frame" x="80" y="121" width="165" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -108,28 +108,44 @@
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="gFB-kS-iNm" id="18h-6C-ctm"/>
+                                    <outlet property="nameLabel" destination="rYD-gf-cqv" id="Fs6-Hz-q2x"/>
+                                    <outlet property="phoneNumberLabel" destination="GaT-kL-fUe" id="nAm-gk-tkq"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyHeader" id="LF0-XV-2IS" customClass="NCCollectionHeaderView">
                             <rect key="frame" x="0.0" y="64" width="320" height="50"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Lab111el" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv8-lO-oSF">
-                                    <rect key="frame" x="139" y="14" width="94" height="21"/>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Group Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv8-lO-oSF">
+                                    <rect key="frame" x="12" y="14" width="98" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <color key="textColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" red="0.29025766159999999" green="0.40926707309999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <outlet property="groupNameLabel" destination="Mv8-lO-oSF" id="Jqi-bE-zbk"/>
+                            </connections>
                         </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="eci-5z-v93" id="dlI-se-bxg"/>
                             <outlet property="delegate" destination="eci-5z-v93" id="b2F-fe-Y6a"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="RVp-v1-3vR"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="RVp-v1-3vR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8do-XC-OOd">
+                            <connections>
+                                <action selector="addButtonTouched:" destination="eci-5z-v93" id="Y1S-7k-LcZ"/>
+                                <segue destination="lml-3o-CLe" kind="modal" id="Xpa-Ve-CyS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="flowLayout" destination="ZOV-Ev-HKk" id="Kjd-cw-e7P"/>
                     </connections>
@@ -137,6 +153,57 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zem-Ij-myP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="800" y="-41"/>
+        </scene>
+        <!--Create New PersonVC - 123123-->
+        <scene sceneID="vlp-o6-zo2">
+            <objects>
+                <viewController title="123123" hidesBottomBarWhenPushed="YES" id="lml-3o-CLe" customClass="NCCreateNewPersonVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="X1B-5c-6c4"/>
+                        <viewControllerLayoutGuide type="bottom" id="5JP-ig-2SO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="icS-1I-Ru4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wrm-q7-MMe">
+                                <rect key="frame" x="8" y="100" width="126" height="122"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="姓名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q8X-MV-hQC">
+                                <rect key="frame" x="158" y="89" width="34" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="NICKNAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="70e-M1-lXE">
+                                <rect key="frame" x="163" y="118" width="90" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="n27-h5-Onk">
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <items>
+                                    <barButtonItem title="Item" id="dyB-JN-GsO"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="uhC-em-evj"/>
+                                    <barButtonItem systemItem="done" id="EFF-XO-Md7">
+                                        <connections>
+                                            <action selector="doneButtonTouched:" destination="lml-3o-CLe" id="Rdd-dh-Oz9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="F07-4p-sAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1215" y="13"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nx9-Wp-FNk">
